testsuite/bsc.interra/libraries/Pull/Bind.bsv.bsc-ccomp-out.expected
checking package dependencies
Error: "Bind.bsv", line 28, column 5: (P0005)
  Unexpected SV 3.1 keyword `bind'; expected variable
